--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.teachingmachines</groupId>
     <artifactId>peapod_2.11</artifactId>
-    <version>0.6-Partitioned-SNAPSHOT</version>
+    <version>0.6-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Peapod</name>
