--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
             <version>2.12.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
     </dependencies>
 
 
