--- a/pom.xml
+++ b/pom.xml
@@ -54,24 +54,34 @@
         </repository>
     </distributionManagement>
 
+    <properties>
+        <scala-library.version>2.11.7</scala-library.version>
+        <spark.version>2.0.0-preview</spark.version>
+        <hadoop-client.version>2.7.2</hadoop-client.version>
+        <typesafe-config.version>1.3.0</typesafe-config.version>
+        <nscala-time.version>2.12.0</nscala-time.version>
+        <jets3t.version>0.9.4</jets3t.version>
+        <scalatest.version>2.2.4</scalatest.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.11.7</version>
+            <version>${scala-library.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.11</artifactId>
-            <version>2.2.4</version>
+            <version>${scalatest.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
-            <version>1.6.1</version>
+            <version>${spark.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.hadoop</groupId>
@@ -83,41 +93,41 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.11</artifactId>
-            <version>1.6.1</version>
+            <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-mllib_2.11</artifactId>
-            <version>1.6.1</version>
+            <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>2.7.2</version>
+            <version>${hadoop-client.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>net.java.dev.jets3t</groupId>
             <artifactId>jets3t</artifactId>
-            <version>0.9.4</version>
+            <version>${jets3t.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.github.nscala-time</groupId>
             <artifactId>nscala-time_2.11</artifactId>
-            <version>2.12.0</version>
+            <version>${nscala-time.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
-            <version>1.3.0</version>
+            <version>${typesafe-config.version}</version>
         </dependency>
 
     </dependencies>
