--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 
     <properties>
         <scala-library.version>2.11.7</scala-library.version>
-        <spark.version>2.0.0-preview</spark.version>
+        <spark.version>1.6.1</spark.version>
         <hadoop-client.version>2.7.2</hadoop-client.version>
         <typesafe-config.version>1.3.0</typesafe-config.version>
         <nscala-time.version>2.12.0</nscala-time.version>
