Experimental and initial web server support for visualizing the Peapod DAG graph

--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,13 @@
             <version>${typesafe-config.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>9.3.9.v20160517</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 
